PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardOwner__c/CorporateCardOwner__c.object-meta.xml
<CustomObject>
    <description>법인카드가 무기명 카드인 경우 기간별 소유자 관리 (경비신청 시 소유자별 해당 기간에 대한 청구내역 조회를 위함)</description>
    <label>법인카드 기간별 소유자</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>