PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardOwner__c/fields/CorporateCard__c.field-meta.xml
<CustomField>
    <fullName>CorporateCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>법인카드</label>
    <referenceTo>CorporateCard__c</referenceTo>
    <relationshipLabel>법인카드 기간별 소유자</relationshipLabel>
    <relationshipName>CorporateCardOwner_CorporateCard</relationshipName>
    <type>Lookup</type>
</CustomField>