PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardOwner__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>비고</label>
    <length>255</length>
    <type>Text</type>
</CustomField>