PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardOwner__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>소지종료일</label>
    <type>Date</type>
</CustomField>