PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardOwner__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>소지시작일</label>
    <type>Date</type>
</CustomField>